[gd_scene load_steps=5 format=3 uid="uid://pjsorwi2bs5d"]

[ext_resource type="Script" path="res://battle/battle_character/character_selected_ui.gd" id="1_u3ai8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_458jk"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btd8i"]
bg_color = Color(1, 0.0313726, 0.0313726, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yxtsb"]

[node name="CharacterSelectedUI" type="ColorRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.180392, 0.588235)
script = ExtResource("1_u3ai8")

[node name="HealthContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 80.0
offset_right = 60.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.1309

[node name="HBoxContainer" type="HBoxContainer" parent="HealthContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -12.0
offset_right = 72.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HealthProgressBar" type="ProgressBar" parent="HealthContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_458jk")
theme_override_styles/fill = SubResource("StyleBoxFlat_btd8i")
value = 25.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="HealthContainer/HBoxContainer/HealthProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.5
offset_top = -11.5
offset_right = 9.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HealthValueLabel" type="Label" parent="HealthContainer/HBoxContainer/HealthProgressBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_yxtsb")

[node name="Label2" type="Label" parent="HealthContainer/HBoxContainer/HealthProgressBar/HBoxContainer"]
layout_mode = 2
text = " HP"
label_settings = SubResource("LabelSettings_yxtsb")
